--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://s7chak.canvas.io",
   "scripts": {
     "build": "react-scripts build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "format": "prettier --write src",
     "format:check": "prettier --check src",
