--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
-    "react-icons": "^4.8.0",
-    "react-fluid-animation": "^1.0.1"
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
@@ -43,7 +41,11 @@
     "gh-pages": "^4.0.0",
     "prettier": "^2.6.2",
     "sass": "^1.52.1",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "react-scripts": "^5.0.1"
   },
+  "resolutions" :{
+    "nth-check":"2.0.1"
+   },
   "packageManager": "yarn@3.2.0"
 }
