--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@primer/octicons-react": "^16.1.1",
     "bulma": "^0.9.4",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.2.0",
