--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "",
   "version": "1.0.0",
-  "homepage": "https://s7chak.github.io",
+  "homepage": ".",
+  "private": false,
   "scripts": {
     "build": "react-scripts build",
     "predeploy": "npm run build",
