--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "framer-motion": "^10.12.16"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
