--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "react-icons": "^4.8.0",
-    "framer-motion": "^10.12.16"
+    "framer-motion": "^10.12.16",
+    "react-ga": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
