--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-switch":"^7.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "react-icons": "^4.8.0",
     "framer-motion": "^10.12.16",
-    "react-ga": "^3.3.1"
+    "react-ga": "^3.3.1",
+    "three": "^0.128.0",
+    "@react-three/fiber": "^8.13.0",
+    "@react-three/drei": "^9.74.8"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
@@ -46,7 +50,8 @@
     "prettier": "^2.6.2",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "vite":"^4.3.9"
   },
   "resolutions" :{
     "nth-check":"2.0.1"
