--- a/src/components/timeLineConfig.json
+++ b/src/components/timeLineConfig.json
@@ -1,8 +1,8 @@
 {
     "Start": "I started my journey with one principle - to be a lifelong learner in any field that I am interested in at any given present.",
     "Engineering_Graduate": "My curiosity found satisfaction in acquainting myself with complex systems at least on paper. I did start building a few of my own and caught the coding bug.",
-    "Full_Stack_Developer": "Started my journey through building frontend, ETL pipelines and then backend.",
-    "Master_Science": "Opportunity to enter another domain presented and I dove into machine learning and the AI universe.",
+    "Full_Stack_Developer": "Started my journey through building frontend, ETL pipelines and then backend for financial data systems.",
+    "Master_Science": "Another new domain, another opportunity and I dove into this giant dataverse headfirst.",
     "ML_Engineer": "My forray into building systems and pipelines for automated machine learning began.",
-    "ML_Ops": "Automating ML Ops in a reliable, robust and explanable framework to manke model validation as easy as clicking a few buttons."
+    "ML_Ops": "Automating ML Ops through a reliable, robust and explanable framework to make model validation as easy as clicking a few buttons."
 }
