--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "dependencies": {
     "@primer/octicons-react": "^16.1.1",
     "bulma": "^0.9.4",
-    "gh-pages": "^4.0.0",
+    // "gh-pages": "^4.0.0",
     "webpack": "^5.86.0",
     "file-loader":"^6.2.0",
     "react": "^18.2.0",
-    "react-animate-on-scroll": "^2.1.5",
+    "react-animate-on-scroll": "^2.1.7",
     "react-switch":"^7.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
