--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "version": "2.0.0",
+  "name": "scaiverse",
+  "version": "1.0",
   "homepage": "https://scaiverse.com/",
   "private": false,
   "scripts": {
