--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "bulma": "^0.9.4",
     "webpack": "^5.86.0",
     "file-loader":"^6.2.0",
-    "react": "^16.14.0",
+    "react": ">18.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-switch":"^7.0.0",
-    "react-dom": "^16.14.0",
+    "react-dom": ">18.0",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "react-icons": "^4.8.0",
