--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "bulma": "^0.9.4",
     "webpack": "^5.86.0",
     "file-loader":"^6.2.0",
-    "react": ">18.0",
-    "react-animate-on-scroll": "^2.1.5",
+    "react": "18.2.0",
+    "react-animate-on-scroll": "^2.1.0",
     "react-switch":"^7.0.0",
-    "react-dom": ">18.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "react-icons": "^4.8.0",
@@ -46,10 +46,9 @@
   "devDependencies": {
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-animate-on-scroll": "^2.1.5",
+    "@types/react-animate-on-scroll": "^2.1.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-scroll": "^1.8.3",
-    "gh-pages": "^4.0.0",
     "prettier": "^2.6.2",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
