--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-ga": "^3.3.1",
     "react-intersection-observer":"9.5.0",
     "three": "^0.153.0",
-    "@react-three/fiber": "^8.11.5",
+    "@react-three/fiber": "8.10.0",
     "@react-three/drei": "^9.74.8",
     "@emailjs/browser": "^3.11.0"
   },
