--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "webpack": "^5.86.0",
     "file-loader":"^6.2.0",
     "react": ">=18.0",
-    "react-animate-on-scroll": "^2.1.0",
+    "react-animate-on-scroll": "^2.1.7",
     "react-switch":"^7.0.0",
-    "react-dom": "^16.14.0",
+    "react-dom": ">=18.0",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "react-icons": "^4.8.0",
@@ -39,7 +39,7 @@
     "react-ga": "^3.3.1",
     "react-intersection-observer":"9.5.0",
     "three": "^0.153.0",
-    "@react-three/fiber": "8.10.0",
+    "@react-three/fiber": "8.15.4",
     "@react-three/drei": "^9.74.8",
     "@emailjs/browser": "^3.11.0"
   },
