--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "prettier": "^2.6.2",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
-    "react-scripts": "^5.0.1",
-    "vite":"^4.3.9"
+    "react-scripts": "^5.0.1"
   },
   "resolutions" :{
     "nth-check":"2.0.1"
