blogger page addition: styling

--- a/src/components/config/scaiBlogConfig.json
+++ b/src/components/config/scaiBlogConfig.json
@@ -2,7 +2,9 @@
     "Learner_Manifesto": {
         "title": "Learner's Manifesto",
         "description": "I want to present some self-help, the only kind that does not make my blood ooze out of my skin and take a dive inside a lava lake. This, though, I find important enough; so much so that I made my own Learner’s Manifesto out of it. <br><br>If you truly wish to be that old, retired-but-not-done-learning, jack-of-all-trades, polymath one day sitting at a corner in a cafe, quietly assimilating some new random fact and forming insights on the cutting edge that our AI “workers” invent, read on.<br><br>* Curiosity is paramount, we’re not cats.<br>* Minds are malleable<br>* Acquiring a new skill is the hobby<br>* Critically check new ideas<br>* Challenge ingrained notions<br>* Diversify from the buffet of fields<br>* Learn from failing<br>* Share learned insight<br>* Stay humble<br><br> And that is it, some guard-rails and initial force to draw us out of our daily inertia.",
-        "url":"https://medium.com/@vrinda.sharma/us-wildfires-hell-on-earth-6602e709f43d",
+        "url":"",
+        "img":"https://cdn.pixabay.com/photo/2014/04/02/10/35/book-303927_1280.png",
+        "date": "March 20, 2024",
         "others":[""]
     }
 }
