--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "@primer/octicons-react": "^16.1.1",
     "bulma": "^0.9.4",
     "webpack": "^5.86.0",
-    "file-loader":"^6.2.0",
+    "file-loader": "^6.2.0",
     "react": ">=18.0",
-    "react-switch":"^7.0.0",
+    "react-switch": "^7.0.0",
     "react-dom": ">=18.0",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "react-icons": "^4.8.0",
     "framer-motion": "^10.12.16",
     "react-ga": "^3.3.1",
-    "react-intersection-observer":"9.5.0",
+    "react-intersection-observer": "9.5.0",
     "three": "^0.153.0",
     "@react-three/fiber": "8.15.4",
     "@react-three/drei": "^9.74.8",
@@ -49,9 +49,10 @@
     "prettier": "^2.6.2",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
-  "resolutions" :{
-    "nth-check":"2.0.1"
-   }
+  "resolutions": {
+    "nth-check": "2.0.1"
+  }
 }
