--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "react-scripts build",
     "predeploy": "npm run build",
+    "format": "prettier --write src",
+    "format:check": "prettier --check src",
     "start": "react-scripts start"
   },
   "browserslist": {
@@ -44,6 +46,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-scroll": "^1.8.3",
+    "prettier": "^2.6.2",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
     "react-scripts": "^5.0.1",
