Recoms page: Book recommendations live

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "three": "^0.153.0",
     "@react-three/fiber": "8.15.4",
     "@react-three/drei": "^9.74.8",
-    "@emailjs/browser": "^3.11.0"
+    "@emailjs/browser": "^3.11.0",
+    "axios": "0.21.1"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
