Tools and resources: version 3.0

--- a/src/components/config/resourceConfig.json
+++ b/src/components/config/resourceConfig.json
@@ -4,7 +4,7 @@
     "description": "A comprehensive book on deep learning concepts and applications.",
     "author": "Ian Goodfellow",
     "link": "https://github.com/janishar/mit-deep-learning-book-pdf",
-    "image": "",
+    "image": "/assets/files/projects/gredo.png",
     "category": "Books"
   },
   {
