--- a/package.json
+++ b/package.json
@@ -38,7 +38,13 @@
     "@react-three/fiber": "8.15.4",
     "@react-three/drei": "^9.74.8",
     "@emailjs/browser": "^3.11.0",
-    "axios": "0.21.1"
+    "axios": "0.21.1",
+    "react-use": "^17.4.0",
+    "react-merge-refs": "^1.1.0",
+    "leva": "^0.9.37",
+    "tone": "^14.8.39",
+    "use-sound": "^4.0.1",
+    "web-audio-beat-detector": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
