--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "react-icons": "^4.8.0",
+    "plotly.js": "^3.0.1",
+    "react-plotly.js": "^2.6.0",
     "framer-motion": "^10.12.16",
     "react-ga": "^3.3.1",
     "react-intersection-observer": "9.5.0",
