--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "bulma": "^0.9.4",
     "webpack": "^5.86.0",
     "file-loader": "^6.2.0",
-    "react": "18.0",
+    "react": ">=18.0",
     "react-switch": "^7.0.0",
-    "react-dom": "18.0",
+    "react-dom": ">=18.0",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "react-icons": "^4.8.0",
@@ -36,9 +36,9 @@
     "framer-motion": "^10.12.16",
     "react-ga": "^3.3.1",
     "react-intersection-observer": "9.5.0",
-    "three": "^0.153.0",
-    "@react-three/fiber": "8.15.4",
-    "@react-three/drei": "^9.74.8",
+    "three": "^0.178.0",
+    "@react-three/fiber": "^9.2.0",
+    "@react-three/drei": "^10.4.4",
     "@emailjs/browser": "^3.11.0",
     "axios": "0.21.1",
     "react-use": "^17.4.0",
