--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "react": ">=18.0",
     "react-switch": "^7.0.0",
     "react-dom": ">=18.0",
-    "react-router-dom": "^6.3.0",
-    "react-scroll": "^1.8.7",
+    "react-router-dom": "^7.6.3",
+    "react-scroll": "^1.9.3",
     "react-icons": "^4.8.0",
     "plotly.js": "^3.0.1",
     "react-plotly.js": "^2.6.0",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^12.23.0",
     "react-ga": "^3.3.1",
-    "react-intersection-observer": "9.5.0",
+    "react-intersection-observer": "^9.16.0",
     "three": "^0.178.0",
     "@react-three/fiber": "^9.2.0",
     "@react-three/drei": "^10.4.4",
