--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "bulma": "^0.9.4",
     "webpack": "^5.86.0",
     "file-loader": "^6.2.0",
-    "react": ">=18.0",
-    "react-switch": "^7.0.0",
-    "react-dom": ">=18.0",
-    "react-router-dom": "^7.6.3",
+    "react": "^19.1.0",
+    "react-switch": "^7.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": " ^7.6.3",
     "react-scroll": "^1.9.3",
     "react-icons": "^4.8.0",
     "plotly.js": "^3.0.1",
@@ -41,8 +41,8 @@
     "@react-three/drei": "^10.4.4",
     "@emailjs/browser": "^3.11.0",
     "axios": "0.21.1",
-    "react-use": "^17.4.0",
-    "react-merge-refs": "^1.1.0",
+    "react-use": "^17.6.0",
+    "react-merge-refs": "^3.0.2",
     "tone": "^14.8.39",
     "use-sound": "^4.0.1",
     "web-audio-beat-detector": "^1.0.0"
