--- a/package.json
+++ b/package.json
@@ -25,27 +25,27 @@
     "bulma": "^0.9.4",
     "webpack": "^5.86.0",
     "file-loader": "^6.2.0",
-    "react": "^19.1.0",
-    "react-switch": "^7.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": " ^7.6.3",
-    "react-scroll": "^1.9.3",
+    "react": ">=18.0",
+    "react-switch": "^7.0.0",
+    "react-dom": ">=18.0",
+    "react-router-dom": "^6.3.0",
+    "react-scroll": "^1.8.7",
     "react-icons": "^4.8.0",
-    "plotly.js": "^3.0.1",
-    "react-plotly.js": "^2.6.0",
-    "framer-motion": "^12.23.0",
+    "framer-motion": "^10.12.16",
     "react-ga": "^3.3.1",
-    "react-intersection-observer": "^9.16.0",
-    "three": "^0.178.0",
-    "@react-three/fiber": "^9.2.0",
-    "@react-three/drei": "^10.4.4",
+    "react-intersection-observer": "9.5.0",
+    "three": "^0.153.0",
+    "@react-three/fiber": "8.15.4",
+    "@react-three/drei": "^9.74.8",
     "@emailjs/browser": "^3.11.0",
     "axios": "0.21.1",
     "react-use": "^17.6.0",
     "react-merge-refs": "^3.0.2",
     "tone": "^14.8.39",
     "use-sound": "^4.0.1",
-    "web-audio-beat-detector": "^1.0.0"
+    "web-audio-beat-detector": "^1.0.0",
+    "plotly.js": "^3.0.1",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
