Scaifin: lib versions

--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "framer-motion": "^10.12.16",
     "react-ga": "^3.3.1",
     "react-intersection-observer": "9.5.0",
-    "three": "^0.153.0",
-    "@react-three/fiber": "8.15.4",
-    "@react-three/drei": "^9.74.8",
+    "three": "^0.178.0",
+    "@react-three/fiber": "^9.2.0",
+    "@react-three/drei": "^10.4.4",
     "@emailjs/browser": "^3.11.0",
     "axios": "0.21.1",
     "react-use": "^17.6.0",
