--- a/src/components/config/gameConfig.json
+++ b/src/components/config/gameConfig.json
@@ -1,7 +1,7 @@
 [
   {
     "name": "Capital Quiz",
-    "description": "Test your knowledge of world capitals.",
+    "description": "World capitals and flags!",
     "link": "",
     "image": "assets/files/games/cap-game.png",
     "category": "Quiz",
