--- a/src/components/config/gameConfig.json
+++ b/src/components/config/gameConfig.json
@@ -1,7 +1,7 @@
 [
   {
-    "name": "Capital Quiz",
-    "description": "World capitals and flags!",
+    "name": "World Cap Quiz",
+    "description": "Countries, capitals and flags!",
     "link": "",
     "image": "assets/files/games/cap-game.png",
     "category": "Quiz",
